--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -3,7 +3,7 @@ $color-secondary: var(--secondary-color);
 $color-dangerous: #c7162b;
 $color-border: #dce1e6;
 
-$font-primary: #111;
+$font-primary: #222;
 $font-secondary: #3c3a3a;
 $font-white: white;
 
@@ -18,4 +18,4 @@ $button-color-dangerous: $color-dangerous;
 $button-color-neutral: #fcfcfc;
 $button-color-active: $color-primary;
 
-$separator-color: #dce1e6;
+$separator-color: #efefef;
