--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -1,18 +1,31 @@
-<div class="category-details">
-  <div class="category-details__title-container">
-    <div class="category-details__title">
-      {{categoryDetails.data.name}}
-    </div>
-    <div class="category-details__buttons">
-      <app-button button-common (click)="onPrint()">
-        <mat-icon svgIcon="export-pdf-rounded"></mat-icon>
-      </app-button>
-    </div>
-  </div>
+<app-details [title]="categoryDetails.data.name" class="category-details">
+  <ng-container buttons-right>
+    <app-button button-transparent (click)="onPrint()">
+      <mat-icon>picture_as_pdf</mat-icon>
+    </app-button>
+  </ng-container>
 
-  <div class="category-details__content">
-    <div class="info-section">
-      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.INFO' | translate" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
+  <ng-container content>
+    <div class="category-details__info-section">
+      <div class="category-details__column">
+        <app-rich-widget *ngIf="categoryDetails.type === CategoryTypeEnum.Car"
+                          icon="speed"
+                          type="mileage"
+                          tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.MILEAGE"
+                          [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.MILEAGE'"
+                          value="{{categoryDetails.data.mileage}}"
+        >
+        </app-rich-widget>
+
+        <app-rich-widget icon="payments"
+                type="currency"
+                tooltip="PAGES.CATEGORY_DETAILS.TOOLTIPS.OVERALL_EXPENSE"
+                [title]="'PAGES.DETAIL.OVERALL_EXPENSE'"
+                value="{{totalCost}}"
+        >
+        </app-rich-widget>
+      </div>
+      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.INFO' | translate" icon="feed" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
         <section class="car-info__content">
           <div class="car-info__raw">
             <span class="car-info__raw-label">{{"PAGES.CATEGORY_DETAILS.LABELS.VEHICLE_ID" | translate}}</span>
@@ -40,46 +53,29 @@
           </div>
         </section>
       </app-widget>
-  
-      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.NOTE' | translate" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
+      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.NOTE' | translate" icon="edit" *ngIf="categoryDetails.type === CategoryTypeEnum.Car">
         <textarea #notesInput class="category-details__notes" [value]="categoryDetails.maintenance.note" placeholder="Type some notes" (focusout)="onTextAreaFocusOut(notesInput.value)"></textarea>
       </app-widget>
-  
-      <div class="category-details__column">
-      <app-widget [title]="'PAGES.DETAIL.OVERALL_EXPENSE' | translate" [info]="'PAGES.CATEGORY_DETAILS.TOOLTIPS.OVERALL_EXPENSE' | translate">
-        <div class="car-info__status">
-          <span>{{totalCost | numberSeparator:this.settingsService.settings.region}}</span>
-          <app-currency [currency]="settingsService.settings.units?.currency"
-                        [locale]="settingsService.settings.region">
-          </app-currency>
-        </div>
-      </app-widget>
-  
-      <app-widget [title]="'PAGES.CATEGORY_DETAILS.WIDGETS.MILEAGE' | translate" *ngIf="categoryDetails.type === CategoryTypeEnum.Car" [info]="'PAGES.CATEGORY_DETAILS.TOOLTIPS.MILEAGE' | translate">
-        <div class="car-info__status">
-          <span>{{categoryDetails.data.mileage | numberSeparator:this.settingsService.settings.region}}</span>
-          <span class="car-info__metric-system">{{ "METRIC_SYSTEM." + (settingsService.settings.units?.metricSystem || MetricSystemEnum[settingsService.settings.region]) | uppercase | translate}}</span>
-        </div>
-      </app-widget>
-    </div>
     </div>
 
-    <ubuntu-container [title]="table.name" *ngFor="let table of categoryDetails.tables">
-      <app-button actions
-                  *ngIf="categoryDetails.type == CategoryTypeEnum.Car"
-                  [matMenuTriggerFor]="contextMenu"
-                  [matMenuTriggerData]="{name: table.name}"
-                  button-transparent>
-        <mat-icon>travel_explore</mat-icon>
-      </app-button>
-      <app-records-table class="category-details__table"
-                         *ngIf="table.data.length"
-                         [data]="table.data"
-                         (edit)="onEdit($event)"
-                         (delete)="onDelete($event)"
-      ></app-records-table>
-    </ubuntu-container>
-  </div>
+    <section class="category-details__tables">
+      <ubuntu-container [title]="table.name" *ngFor="let table of categoryDetails.tables">
+        <app-button actions
+                    *ngIf="categoryDetails.type == CategoryTypeEnum.Car"
+                    [matMenuTriggerFor]="contextMenu"
+                    [matMenuTriggerData]="{name: table.name}"
+                    button-transparent>
+          <mat-icon>travel_explore</mat-icon>
+        </app-button>
+        <app-records-table class="category-details__table"
+                           *ngIf="table.data.length"
+                           [data]="table.data"
+                           (edit)="onEdit($event)"
+                           (delete)="onDelete($event)"
+        ></app-records-table>
+      </ubuntu-container>
+    </section>
+  </ng-container>
 
   <mat-menu #contextMenu="matMenu">
     <ng-template matMenuContent let-name="name">
@@ -91,4 +87,4 @@
       </button>
     </ng-template>
   </mat-menu>
-</div>
+</app-details>
