--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -3,53 +3,28 @@
 @import '/src/fonts';
 
 .category-details {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-
-  user-select: none;
-
-  &__title-container {
-    padding: 9px 24px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    background-color: rgb(50, 48, 48);
-  }
-
-  &__title {
-    font-family: $font-system;
-    font-size: 24px;
-    color: white;
-  }
-
-  &__buttons {
-    display: flex;
-    gap: 8px;
-  }
 
   &__notes {
     padding: 8px;
     height: 98px;
     width: 192px;
-    
-    border: 1px solid #bfbfbf;
-    border-radius: 8px;
+
+    border: 2px solid #f2f2f2;
+    border-radius: 12px;
     resize: none;
 
     font-family: $font-system;
+
+    &:focus {
+      outline: none !important;
+      border: 2px solid var(--primary-color) !important;
+    }
   }
 
-  &__content {
-    @include mixins.scrollable;
-
+  &__tables {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    padding: 24px;
-    height: 100%;
-    position: relative;
   }
 
   &__column {
@@ -58,7 +33,7 @@
     gap: 16px;
   }
 
-  .info-section {
+  &__info-section {
     width: fit-content;
     display: flex;
     gap: 16px;
@@ -66,7 +41,6 @@
 
   .car-info {
     margin-top: 4px;
-
     font-family: $font-system;
 
     &__raw {
