--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -53,9 +53,9 @@
     height: 16px;
     width: 16px;
     line-height: 16px;
-    color: white;
+    color: $color-primary;
     padding: 6px;
-    background-color: $color-primary;
+    background-color: $color-secondary;
     border-radius: 10px;
   }
 }
