--- a/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
+++ b/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
@@ -15,6 +15,7 @@
     align-items: center;
     gap: 4px;
     height: 36px;
+    margin-left: 6px;
 
     font-size: 14px;
     font-family: $font-system;
