--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -52,6 +52,10 @@
       &:hover {
         background: rgba(0,0,0,0.05);
       }
+
+      &--active {
+        background: rgba(0,0,0,0.05);
+      }
     }
   }
 }
