--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button mat-ripple class="button">
+<button mat-ripple class="button" [class.button--active]="active">
   <ng-content></ng-content>
 </button>
